--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,7 +24,7 @@ jobs:
         uses: gaurav-nelson/github-action-markdown-link-check@v1
         with:
           base-branch: main
-          check-modified-files-only: 'yes'
-          config-file: '.github/mlc_config.json'
+          check-modified-files-only: 'no'
+          config-file: .github/mlc_config.json
           use-quiet-mode: 'no'
           use-verbose-mode: 'yes'
